--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <md-toolbar color="primary" layout-fill>
   <a md-raised-button color="accent">VibeTribe</a>
+  <span class="header-spacer"></span>
+  <button md-button [mdMenuTriggerFor]="menu">Menu</button>
+  <md-menu #menu="mdMenu">
+    <button md-menu-item>Item1</button>
+    <button md-menu-item>Item1</button>
+    <button md-menu-item>Item1</button>
+  </md-menu>
 </md-toolbar>
