started tutorial 3, create modal dialog template next

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
   <span class="header-spacer"></span>
   <button md-button [mdMenuTriggerFor]="menu">Menu</button>
   <md-menu #menu="mdMenu">
-    <button md-menu-item>Item1</button>
-    <button md-menu-item>Item1</button>
-    <button md-menu-item>Item1</button>
+    <a md-menu-item>Login</a>
+    <a md-menu-item>Register</a>
+    <a md-menu-item>Profile</a>
+    <a md-menu-item>Logout</a>
   </md-menu>
 </md-toolbar>
+<router-outlet></router-outlet>
